@@ -15,7 +15,7 @@
  * PERFORMANCE OF THIS SOFTWARE.
  */
 
-/* $Id: server.h,v 1.74 2004/07/20 07:13:34 marka Exp $ */
+/* $Id: server.h,v 1.75 2004/10/11 05:30:19 marka Exp $ */
 
 #ifndef NAMED_SERVER_H
 #define NAMED_SERVER_H 1
@@ -139,6 +139,12 @@ isc_result_t
 ns_server_reconfigcommand(ns_server_t *server, char *args);
 /*
  * Act on a "reconfig" command from the command channel.
+ */
+
+isc_result_t
+ns_server_notifycommand(ns_server_t *server, char *args, isc_buffer_t *text);
+/*
+ * Act on a "notify" command from the command channel.
  */
 
 isc_result_t
